--- a/templates/create.html
+++ b/templates/create.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../style1.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://login2explore.com/jpdb/resources/js/0.0.3/jpdb-commons.js"></script>
@@ -136,4 +136,3 @@
     </script>
   </body>
 </html>
-<!-- comment -->
