--- a/templates/update.html
+++ b/templates/update.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="../style1.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <script src="http://login2explore.com/jpdb/resources/js/0.0.3/jpdb-commons.js"></script>
     <link
       rel="stylesheet"
